force-app/main/default/objects/SHT_Dave_History__c/SHT_Dave_History__c.object-meta.xml
<CustomObject>
    <label>Sales/Hedge Transaction History</label>
    <nameField>
        <displayFormat>SHTDHIST-{0000}</displayFormat>
        <label>SHT DAVE History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales/Hedge Transaction Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>