force-app/main/default/objects/SHT_Dave_History__c/fields/Hedged_Vol__c.field-meta.xml
<CustomField>
    <fullName>Hedged_Vol__c</fullName>
    <label>Hedged Vol(CBM)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>