force-app/main/default/objects/SHT_Dave_History__c/fields/Hedging_Date__c.field-meta.xml
<CustomField>
    <fullName>Hedging_Date__c</fullName>
    <label>Hedging Date</label>
    <type>DateTime</type>
</CustomField>