force-app/main/default/objects/SHT_Dave_History__c/fields/Mass_CBM__c.field-meta.xml
<CustomField>
    <fullName>Mass_CBM__c</fullName>
    <label>Mass(CBM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>