force-app/main/default/objects/SHT_Dave_History__c/fields/SHT_Dave__c.field-meta.xml
<CustomField>
    <fullName>SHT_Dave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SHT Dave</label>
    <referenceTo>SHT_Dave__c</referenceTo>
    <relationshipLabel>SHT Dave</relationshipLabel>
    <relationshipName>SHT_Dave_History</relationshipName>
    <type>Lookup</type>
</CustomField>