force-app/main/default/objects/SHT_Dave_History__c/fields/Transactions__c.field-meta.xml
<CustomField>
    <fullName>Transactions__c</fullName>
    <label>Transactions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>