force-app/main/default/objects/SHT_Dave_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SHT_Dave__c</columns>
    <columns>Product_Name__c</columns>
    <columns>SHT_Dave_Master__c</columns>
    <columns>Time_Stamp__c</columns>
    <columns>Transactions__c</columns>
    <columns>Status__c</columns>
    <columns>Mass_CBM__c</columns>
    <columns>Mass_MT__c</columns>
    <columns>Hedge__c</columns>
    <columns>Exposure_Factor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>